--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
 @import 'variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
+
+.my-login-page {
+  background-color: #486eb1;
+  font-size: 14px;
+}
