Add Calendar Module

--- a/src/app/layouts/login-layout/login-layout.component.html
+++ b/src/app/layouts/login-layout/login-layout.component.html
@@ -12,7 +12,7 @@
           </div>
         </div>
         <div class="footer">
-          Copyright © 2017 — Your Company
+          Copyright © 2017 — Every Nation Japan
         </div>
       </div>
     </div>
