Edit Login page Add Fontawesome

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 @import 'variables';
 @import '../node_modules/bootstrap/scss/bootstrap';
 @import '../node_modules/angular-calendar/scss/angular-calendar.scss';
+//@import '../node_modules/font-awesome/scss/font-awesome';
 
 .my-login-page {
   background-color: #486eb1;
