--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -17,3 +17,34 @@
 .no-margin {
   margin: 0;
 }
+
+button{
+  margin-bottom: 10px;
+  background-color: #486eb1;
+}
+
+.btn-facebook{
+  background-color: #3b5998;
+  position: relative;
+
+  fa{
+    position: absolute;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    width: 48px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-right: 1px solid rgba(0,0,0,0.2);
+
+    i{
+      font-size: 2.25em;
+      line-height: 1.4;
+    }
+  }
+
+  &:hover{
+    background-color: darken(#3b5998, 10);
+  }
+}
