Add Calendar Module

--- a/src/app/layouts/login-layout/login-layout.component.html
+++ b/src/app/layouts/login-layout/login-layout.component.html
@@ -7,7 +7,7 @@
         </div>
         <div class="card fat">
           <div class="card-body">
-            <h4 class="card-title">Login</h4>
+            <h4 class="card-title text-center">ENTS Events Calendar</h4>
             <router-outlet></router-outlet>
           </div>
         </div>
