Add Authentication basic behavior

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 //@import '../node_modules/font-awesome/scss/font-awesome';
 
 .my-login-page {
-  background-color: #486eb1;
+  //background-color: #486eb1;
   font-size: 14px;
+  background: url('assets/images/background-waves.png');
 }
