--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,27 +1,29 @@
-<form method="POST" lpformnum="1" _lpchecked="1">
+<form [formGroup]="loginForm" (ngSubmit)="onSubmit()" method="POST" lpformnum="1" _lpchecked="1">
 
   <div class="form-group">
     <label for="email">E-Mail Address</label>
 
-    <input id="email" type="email" class="form-control" name="email" value="" required="" autofocus=""
+    <input id="email" type="email" class="form-control" name="email" formControlName="email" value="" required=""
+           autofocus=""
            autocomplete="off">
   </div>
 
   <div class="form-group">
-    <label for="password">Password
-      <a href="forgot.html" class="float-right">
-        Forgot Password?
-      </a>
-    </label>
-    <div style="position:relative"><input id="password" type="password" class="form-control" name="password" required=""
-                                          autocomplete="off">
+    <label for="password">Password</label>
+    <div style="position:relative">
+      <input id="password" type="password" class="form-control" name="password"
+             formControlName="password" required="" autocomplete="off">
     </div>
   </div>
 
   <div class="form-group">
     <label>
       <input type="checkbox" name="remember"> Remember Me
+      <a href="forgot.html" class="float-right">
+        Forgot Password?
+      </a>
     </label>
+
   </div>
 
   <div class="form-group no-margin">
@@ -30,8 +32,9 @@
     </button>
   </div>
   <div class="form-group no-margin">
-    <button (click)="socialSignIn('facebook')" class="btn btn-primary btn-block btn-facebook">
-      <fa name="facebook-f" size="2x"></fa> Sign in with Facebook
+    <button type="button" (click)="socialSignIn('facebook')" class="btn btn-primary btn-block btn-facebook">
+      <fa name="facebook-f" size="2x"></fa>
+      Sign in with Facebook
     </button>
   </div>
   <div class="margin-top20 text-center d-none">
