--- a/src/app/layouts/home-layout/navbar/navbar.component.html
+++ b/src/app/layouts/home-layout/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
   <a href="/" class="navbar-brand">{{ company.displayName }}</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar7">
+  <button class="navbar-toggler" type="button" (click)="navbarCollapsed = !navbarCollapsed">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <div class="navbar-collapse collapse justify-content-stretch" id="navbar7">
+  <div class="navbar-collapse collapse justify-content-stretch" [ngbCollapse]="navbarCollapsed">
     <ul class="navbar-nav ml-auto">
       <li class="nav-item">
-        <a class="nav-link" href="#">Logout</a>
+        <a class="nav-link" href="javascript:" (click)="logout()">Logout</a>
       </li>
     </ul>
   </div>
